<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@id/home_dest"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    <item
            android:id="@id/productList_dest"
            android:icon="@drawable/ic_cart"
            android:title="@string/product_list" />
    <item
            android:id="@id/order_dest"
            android:icon="@drawable/ic_empty_shopping_cart"
            android:title="@string/order" />
    <item
            android:id="@id/notification_dest"
            android:icon="@drawable/ic_help"
            android:title="@string/notification" />
    <item
            android:id="@id/login_dest"
            android:icon="@drawable/ic_user_active"
            android:title="@string/account" />
</menu>
