<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AccountFragment">

    <Button
            android:id="@+id/account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/account_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="50dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
    />


    <androidx.cardview.widget.CardView
            android:id="@+id/name_lv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/account_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="12dp">

        <LinearLayout
                android:id="@+id/name_display_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="15sp"
                    android:layout_weight="1"
            />

            <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/edit_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:visibility="invisible">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_name"
                    android:textSize="15sp"
                    android:layout_weight="1"
            />

            <EditText
                    android:id="@+id/new_name_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="textPersonName"
                    android:layout_weight="1"
                    style="@style/EditText"
            />
        </LinearLayout>

        <Button
                android:id="@+id/edit_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn_txt"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="5dp"
                />

        <LinearLayout
                android:id="@+id/name_save_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:visibility="invisible">

            <Button
                    android:id="@+id/name_discard_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discard"
                    android:layout_marginRight="5dp"/>

            <Button
                    android:id="@+id/name_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_lv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/name_lv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="12dp">

        <LinearLayout
                android:id="@+id/display_phone_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="15sp"
                    android:layout_weight="1"
            />

            <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/edit_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:visibility="invisible">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_phone"
                    android:textSize="15sp"
                    android:layout_weight="1"
            />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:inputType="phone"
                    style="@style/EditText"
            />
        </LinearLayout>

        <Button
                android:id="@+id/edit_phone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn_txt"
                android:layout_marginRight="5dp"
                android:layout_gravity="bottom|end"/>

        <LinearLayout
                android:id="@+id/phone_save_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:visibility="invisible">

        <Button
                android:id="@+id/phone_discard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:layout_marginRight="5dp"/>

        <Button
                android:id="@+id/phone_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>